# plex-mcp-server

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt  watcher.py
.trunk/: trunk.yaml
app/: __init__.py  main.py
app/modules/: __init__.py  client.py  collection.py  library.py  media.py  playlist.py  search.py  server.py  sessions.py  user.py
app/utils/: __init__.py  wrappers.py
mcp_plex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
