# pyproject.toml
[project]
name = "mcp-plex"
version = "0.1.0"
description = "My Plex thing that uses uv and makes me scream into the void"
dependencies = [
    "aiohttp>=3.12.4",
    "asyncio>=3.4.3",
    "mcp>=1.9.2",
    "plexapi>=4.15.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "starlette>=0.28.0",
    "uvicorn>=0.23.0",
]
requires-python = ">=3.12"
[tool.uv]
package = true
[project.scripts]
app = "app:run"