# pyproject.toml
[project]
name = "mcp-plex"
version = "0.1.0"
description = "My Plex thing that uses uv and makes me scream into the void"
dependencies = [
  "asyncio>=3.4.3",
  "fastmcp>=2.6.0",
  "httpx>=0.28.1",
  "plexapi>=4.15.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "starlette>=0.28.0",
  "uvicorn>=0.23.0",
  "watchdog>=6.0.0",
]
requires-python = ">=3.12"
[tool.uv]
package = true
[project.scripts]
app = "app:run"
